syntax = "proto3";
option java_multiple_files = true;
package com.hyeonguj.tracing;

service HelloService {
  rpc SayHello ( HelloRequest ) returns ( HelloResponse ) {}
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}
